# ingex

./: INSTALL_STUDIO  Makefile  ffmpeg-DVCPROHD-0.5.patch  ffmpeg_default_bitrate.patch  ffmpeg_fix_imlib2.patch  ffmpeg_quicktime_DVCPRO-HD.patch  ffmpeg_tref_quicktime.patch
Ingex/capture/: Makefile  dvs_sdi.c  nexus_control.h  testgen.c  utils.c  utils.h
Ingex/common/: audio_utils.c  audio_utils.h  dv50_encoder.c  dv50_encoder.h  dv_encoder.c  dv_encoder.h  dvd_encoder.c  dvd_encoder.h  encodeLib.mpc  integer_types.h  quad_split_I420.c  quad_split_I420.h
Ingex/database/: README.txt
Ingex/docs/: BUILD.txt  PREREQUISITES.txt  acetao_linux.html
Ingex/mxfwriter/: MXFUtils.cpp  MXFUtils.h  MXFWriter.cpp  MXFWriter.h  MXFWriterException.cpp  MXFWriterException.h  Makefile  test_mxfwriter.cpp
MediaHarmony/: Makefile  README.txt  media_harmony.c  media_link.c  media_many.c  mh_full_audit.c  mxf_essence.c  mxf_essence.h  mxf_harmony.c  test_mxf_essence.c
MediaHarmony/samba-3.0.26a-patch/: Makefile.patch  README.txt  media_harmony.patch  patch_08040223
YUVlib/: Makefile  YUV_DirectShow.cpp  YUV_DirectShow.h  YUV_blend.c  YUV_blend.h  YUV_deinterlace.c  YUV_deinterlace.h  YUV_ffmpeg.c  YUV_ffmpeg.h  YUV_frame.c  YUV_frame.h  YUV_quarter_frame.c  YUV_quarter_frame.h  YUV_resample.c  YUV_resample.h  YUV_scale_pic.c  YUV_scale_pic.h  YUV_small_pic.c  YUV_small_pic.h  YUV_text_overlay.c  YUV_text_overlay.h  YUV_to_rgb.c  YUV_to_rgb.h
YUVlib/examples/: Makefile  README.txt  display_raw.c  dv50_quad.c  planar_YUV_io.c  planar_YUV_io.h  raw_I420_quad.c
archive/: README.txt
archive/config/: ingex.cfg.channel  ingex.cfg.dmi  ingex.cfg.test  ingex.cfg.testbed  profile_default.prf
archive/database/: IngexRecorderDb.sql  LocalInfaxDb.sql  create_example.sh  create_local_infax_db_example.sh  create_recorder_db_example.sh  drop_example.sh  drop_local_infax_db_example.sh  test_d3_source.sql  test_local_infax.sql
archive/jogshuttle/: IngexConfidenceReplay.html  IngexConfidenceReplay.pref  old_IngexConfidenceReplay.pref
archive/kde-desktop/: Barcode Scanner.desktop  Cache  Config  Ingex.desktop  Logs  QC Cache.desktop  QC Player.desktop  QC Reports.desktop  Recorder.desktop  Tape Export.desktop  qc_player_desktop.sh
archive/scripts/: extractLTO  ingex_recorder_setup  install-1-ingex_DMI_R1.sh  install-2-ingex_DMI_R1.sh  resettape  rewindtape  run_barcode_scanner.sh  run_recorder.sh  run_tape_export.sh
archive/spec/: dvs.conf  dvs_setup  dvsdriver27p57.spec  dvsdriver3_4_0_2.spec  ingex_archive.spec  ingex_setup  qc_player.spec  qc_setup  shttpd.spec
archive/src/: Makefile  rules.mk  vars.mk
common/: ElapsedTimeReporter.cpp  ElapsedTimeReporter.h  Makefile  README.txt  Rational.h  Timecode.cpp  Timecode.h  VideoRaster.cpp  VideoRaster.h  XMLWriter.cpp  XMLWriter.h  XmlTools.cpp  XmlTools.h  add_bitc.cpp  audio_utils.c  audio_utils.h  avsync_analysis.c  avsync_analysis.h  commonLib.mpc  digibeta_dropout.c  digibeta_dropout.h  dvs_sdk_paths.mk  integer_types.h  libmxf.mk  logF.c  logF.h  multicast_compressed.c  multicast_compressed.h  multicast_video.c  multicast_video.h  nexus_control.c  nexus_control.cpp  nexus_control.h  psnr.c  psnr.h  sport10bit  time_utils.c  time_utils.h  unittests.c  unittests.cpp  (+12 more)
common/YUVlib/: Makefile  README.txt  YUV_DirectShow.cpp  YUV_DirectShow.h  YUV_blend.c  YUV_blend.h  YUV_ffmpeg.c  YUV_ffmpeg.h  YUV_frame.c  YUV_frame.h  YUV_quarter_frame.c  YUV_quarter_frame.h  YUV_resample.c  YUV_resample.h  YUV_scale_pic.c  YUV_scale_pic.h  YUV_small_pic.c  YUV_small_pic.h  YUV_text_overlay.c  YUV_text_overlay.h  YUV_to_rgb.c  YUV_to_rgb.h
common/tools/: Makefile  clapperboard_avsync.c  compare_archive_mxf.c  convert_10bit_video.c  convert_audio.c  create_audio_test_signal.c  create_video_test_signal.c  detect_digibeta_dropouts.c  disk_rw_benchmark.c  dump_vc3.c  jpeg_info.pl  receive_video.c  send_video.c  simple_mxf_demux.c
htdocs/: EVS_structure.html  P2_structure.html  TransferToP2.html  XDCAM_structure.html  contact.html  index.html  publish_to_sf.sh
htdocs/MediaHarmony/: index.html
htdocs/archive/: LTA00000101.mxf.html  index.html
htdocs/libMXF/: index.html
htdocs/studio/: index.html  (+2 more)
ingex_server/: AudioMixer.cpp  AudioMixer.h  Makefile  audio_mixdown.c  audio_utils.c  audio_utils.h  burn_tc.c  dvd_encoder.c  dvd_encoder.h  fixwav.c  monitor_3.sh  nexus_control.h  nexus_save.c  nexus_xv.c  quad_split_I420.c  quad_split_I420.h  recorder.c  recorder.h  run_nexus_sdi.sh  testgen.c  utils.c  utils.h
libMXF++/: Makefile  vars.mk
media_harmony/: Makefile  media_harmony.c  mh_full_audit.c
mxf_essence/: Makefile  mxf_essence.c  mxf_essence.h  mxf_harmony.c  test.c
player/: Makefile  README.txt
studio/: Makefile  README.txt  aaf_gcc4_const.patch  codecs-for-ffmpeg.spec  dvsdriver3.spec  ffmpeg-0.5-archive-mxf.patch  ffmpeg-0.5-dnxhd-avid-nitris.patch  ffmpeg-0.5-dnxhd-fix-interlaced-decoding-issue-1753.patch  ffmpeg-0.5-dnxhd-interlaced-parse.patch  ffmpeg-0.5-dnxhd-sst.patch  ffmpeg-0.5-imx-frame-too-large-error.patch  ffmpeg-0.5-imx-ntsc-buffer-size.patch  ffmpeg-0.5-mpeg2-closed-gop-b-frames.patch  ffmpeg-0.5-nonlinear-quant.patch  ffmpeg-0.5-quicktime-aspect-ratio.patch  ffmpeg-0.5-x264-require-check.patch  ffmpeg-DNxHD-h264-aac.spec  ffmpeg-DVCPROHD-0.5.patch  ffmpeg-DVCPROHD-r15593.patch  ffmpeg_default_bitrate.patch  ffmpeg_fix_imlib2.patch  ingex-studio.spec  ingex_rpms.txt  nightly_builds.txt  nightly_ingex_build.dumper
studio/ace-tao/Ingexgui/: AUTHORS  ChangeLog  README  configure.in  ingexgui.kdevelop
studio/ace-tao/Ingexgui/src/: Makefile.am  activity.xpm  blank.xpm  colours.h  comms.cpp  comms.h  concerned.xpm  controller.cpp  controller.h  dialogues.cpp  dialogues.h  down.xpm  dragbuttonlist.cpp  dragbuttonlist.h  eventlist.cpp  eventlist.h  exclamation.xpm  ffx16.xpm  ffx2.xpm  ffx32.xpm  ffx4.xpm  ffx64.xpm  ffx8.xpm  frx16.xpm  frx2.xpm  frx32.xpm  frx4.xpm  frx64.xpm  frx8.xpm  happy.xpm  help.cpp  help.h  ingexgui.cpp  ingexgui.h  ingexgui.xpm  jogshuttle.cpp  jogshuttle.h  noactivity.xpm  paused.xpm  play.xpm  (+24 more)
(+1686 files in other folders)
